<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:weightSum="6"

    >

    <LinearLayout
        android:id="@+id/catLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cat1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_txt"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:shadowColor="@android:color/white"
            android:shadowRadius="8"
            android:layout_margin="8dp"
            android:padding="8dp"


            />

        <Button
            android:id="@+id/cat2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_txt"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:shadowColor="@android:color/white"
            android:shadowRadius="8"
            android:layout_margin="8dp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/cat3_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_txt"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:shadowColor="@android:color/white"
            android:shadowRadius="8"
            android:layout_margin="8dp"
            android:padding="8dp"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="top">

        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female" />

        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_tv"
            android:hint="اكتب اسمك هنا ...."
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_btn"
            android:text="@string/start_txt"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:shadowColor="@android:color/white"
            android:shadowRadius="8"/>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>